--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,16 +10,16 @@ body {
 }
 
 // Img-fondo-index
-.img-fondo-index {
-    background-image: url('../img/img-index/fondo2.jpg');
-    width: 100%;
-    height: 40vh;
-    background-size: cover;
-    background-position: center;
-    position: absolute;
-    opacity: 0.9;
-    border-bottom: 6px solid white;
-}
+// .img-fondo-index {
+//     background-image: url('../img/img-index/fondo2.jpg');
+//     width: 100%;
+//     height: 40vh;
+//     background-size: cover;
+//     background-position: center;
+//     position: absolute;
+//     opacity: 0.9;
+//     border-bottom: 6px solid white;
+// }
 
 // Cards
 .titulo-index {
@@ -27,28 +27,32 @@ body {
     color: white;
     font-weight: 600;
     text-align: center;
-    margin-top: 220px;
+    margin-top: 20px;
     font-size: 5rem;
     text-shadow: 0 1px 0 rgba(0,0,0,.5)
 }
-.card-deck {
-    margin-top: 100px;
+.cards-juegos {
+    width: 80rem;
+    margin: auto;
+    margin-top: 80px;
     display: flex;
-    justify-content: space-evenly;
+    flex-flow: row wrap;
+    justify-content: space-around ;
 }
-.card {
-    width: 550px;
+.cards {
+    width: 400px;
+    margin-bottom: 30px;
     background-color: transparent;
     border: 2px solid white;
+    border-radius: 7px;
+    &:hover {
+        cursor: pointer;
+        opacity: 1;
+        transform: scale(1.05, 1.05);
+    }
 }
-.card:hover {
-    cursor: pointer;
-    opacity: 1;
-    transform: scale(1.05, 1.05);
+.card-img-top {
+    height: 200px;
 }
 
-.card-img-top {
-    height: 400px;
-    transition-property: width;
-}
 
