--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,32 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: gray; }
+  background-color: #fafafa; }
 
 .no-gutters {
   padding: 0;
   margin: 0; }
 
+.btn {
+  padding: 8px;
+  margin: 15px;
+  width: 150px;
+  border-radius: 100px; }
+
 .titulo-index {
   position: relative;
-  color: white;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 20px;
-  font-size: 5rem;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5); }
+  text-align: center; }
+  .titulo-index p {
+    color: #0d6efd;
+    font-weight: 600;
+    margin-top: 100px;
+    font-size: 5rem;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5); }
 
 .cards-juegos {
   width: 80rem;
   margin: auto;
-  margin-top: 80px;
+  margin-top: 200px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around; }
@@ -28,7 +35,7 @@ body {
   width: 400px;
   margin-bottom: 30px;
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid #0d6efd;
   border-radius: 7px; }
   .cards:hover {
     cursor: pointer;
