--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,14 +2,14 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: gray;
+    background-color: #fafafa;
 }
 .no-gutters {
     padding: 0;
     margin: 0;
 }
 
-// Img-fondo-index
+// // Img-fondo-index
 // .img-fondo-index {
 //     background-image: url('../img/img-index/fondo2.jpg');
 //     width: 100%;
@@ -20,21 +20,32 @@ body {
 //     opacity: 0.9;
 //     border-bottom: 6px solid white;
 // }
+// Nav
+.btn {
+    padding: 8px;
+    margin: 15px;
+    width: 150px;
+    border-radius: 100px;
+}
 
-// Cards
+// Selecciona un juego
 .titulo-index {
     position: relative;
-    color: white;
-    font-weight: 600;
     text-align: center;
-    margin-top: 20px;
-    font-size: 5rem;
-    text-shadow: 0 1px 0 rgba(0,0,0,.5)
+    p {
+        color: #0d6efd;
+        font-weight: 600;
+        margin-top: 100px;
+        font-size: 5rem;
+        text-shadow: 0 1px 0 rgba(0,0,0,.5);
+    }
 }
+
+// Cards
 .cards-juegos {
     width: 80rem;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 200px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around ;
@@ -43,7 +54,7 @@ body {
     width: 400px;
     margin-bottom: 30px;
     background-color: transparent;
-    border: 2px solid white;
+    border: 2px solid #0d6efd;
     border-radius: 7px;
     &:hover {
         cursor: pointer;
