--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ body {
   padding: 0;
   margin: 0; }
 
+.img-fondo-index {
+  width: 100%;
+  height: 40vh;
+  position: absolute;
+  opacity: 0.9;
+  background-color: lightseagreen; }
+
 .btn {
   padding: 8px;
   margin: 15px;
