--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,16 +10,18 @@ body {
 }
 
 // // Img-fondo-index
-// .img-fondo-index {
-//     background-image: url('../img/img-index/fondo2.jpg');
-//     width: 100%;
-//     height: 40vh;
-//     background-size: cover;
-//     background-position: center;
-//     position: absolute;
-//     opacity: 0.9;
-//     border-bottom: 6px solid white;
-// }
+.img-fondo-index {
+    // background-image: url('../img/img-index/fondo2.jpg');
+    width: 100%;
+    height: 40vh;
+    // background-size: cover;
+    // background-position: center;
+    position: absolute;
+    opacity: 0.9;
+    // border-bottom: 6px solid white;
+    background-color: lightseagreen;
+}
+
 // Nav
 .btn {
     padding: 8px;
